Client => Game(GetName)
Connection:
- Recvall => get sytes from stream/Server
- GetUInt32_t
- GetString
Game:
- Create constructor
- Connect => trying every 1s to connect with server, then take a name
from Server

--- a/Client/Client/Client.vcxproj.filters
+++ b/Client/Client/Client.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClInclude Include="src\Game.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="src\main.h">
+    <ClInclude Include="src\Board.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
