--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -135,9 +135,9 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Board.h" />
     <ClInclude Include="src\Connection.h" />
     <ClInclude Include="src\Game.h" />
-    <ClInclude Include="src\main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
