--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Board.h" />
     <ClInclude Include="src\Connection.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\Player.h" />
