Now client ask sever about name
- PacketType isn't a class anymore
- Server now have thread to manage packets with clients

--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="src\Connection.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\SendGetMethods.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Board.h" />
