--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="src\Board.h" />
     <ClInclude Include="src\Connection.h" />
     <ClInclude Include="src\Game.h" />
+    <ClInclude Include="src\Packet.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
